--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,63 +1,33 @@
----
+# Configuration file for pre-commit hooks
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks  # Main Pre-commit hook
+    rev: v5.0.0
+    hooks:
+      - id: trailing-whitespace
+      - id: check-json
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: pretty-format-json
+        args: [--autofix]
+        exclude: '\.ipynb$'
 
-    - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.4.0
-      hooks:
-          - id: check-json
-          - id: check-yaml
-          - id: pretty-format-json
-            args:
-            - --autofix
-            exclude: '\.ipynb$'
-          - id: end-of-file-fixer
-          - id: trailing-whitespace
+  - repo: https://github.com/psf/black
+    rev: 25.1.0
+    hooks:
+      - id: black
+        args: [--line-length=100]
 
-    - repo: https://github.com/psf/black
-      rev: 23.1.0
-      hooks:
-          - id: black
-            args: [--line-length, "79"]
+# Python Sorter hook
+  - repo: https://github.com/pycqa/isort
+    rev: 6.0.1
+    hooks:
+      - id: isort
+        args: [--profile=black, --filter-files]
 
-    - repo: https://github.com/pycqa/isort
-      rev: 5.12.0
-      hooks:
-          - id: isort
-            args: [--profile, black, --filter-files]
-
-    - repo: https://github.com/asottile/pyupgrade
-      rev: v3.3.1
-      hooks:
-          - id: pyupgrade
-            args: [--py38-plus]
-
-    - repo: https://github.com/PyCQA/flake8
-      rev: 6.0.0
-      hooks:
-          - id: flake8
-            args: [--count, --show-source, --statistics, '--ignore', 'E501,E203,W503,E201,E202,E221,E222,E231,E241,E271,E272,E702,E713']
-            # additional_dependencies: [flake8-bugbear==21.3.1, pep8-naming]
-            log_file: flake8.log
-
-    - repo: https://github.com/asottile/setup-cfg-fmt
-      rev: v2.2.0
-      hooks:
-          - id: setup-cfg-fmt
-
-    - repo: https://github.com/PyCQA/bandit
-      rev: 1.7.5
-      hooks:
-      - id: bandit
-        args: ["-r"]
-        files: ^(dsms)/.*
-
-    - repo: local
-      hooks:
-      - id: pylint
-        name: pylint
-        entry: pylint
-        args: ["--rcfile=.pylintrc", "--extension-pkg-whitelist='pydantic'"]
-        language: python
-        types: [python]
-        require_serial: true
-        files: ^(dsms)/.*
+      # Python Linter hook
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.2.0
+    hooks:
+      - id: flake8
+        args: [--count, --show-source, --statistics, '--ignore', 'E203,E501,W503']
+        log_file: flake.log
